update log controller added
