# backend/api/src/index.js
@@ -12,6 +12,7 @@ const authRoutes = require("./routes/authRoutes");
 const stateRoutes = require("./routes/stateRoutes");
 const cityRoutes = require("./routes/cityRoutes");
 const userTypeRoutes = require("./routes/userTypeRoutes");
+const updateLogRoutes = require("./routes/updateLogRoutes");
 const mongoDBConnection = require("./config/database");
 const colors = require("colors");
 const errorHandler = require("./middleware/error");
@@ -36,6 +37,7 @@ app.use("/api/schemeTypes", schemeTypeRoutes);
 app.use("/api/state", stateRoutes);
 app.use("/api/city", cityRoutes);
 app.use("/api/userType", userTypeRoutes);
+app.use("/api/updateLog", updateLogRoutes);
 app.use(errorHandler);
 
 // app.use("", (request, response, next) => {
