# backend/api/src/swagger/swagger.yaml
@@ -997,6 +997,83 @@ paths:
           description: Validation Error
         "405":
           description: Invalid input
+  /mail:
+    get:
+      tags:
+        - Mail
+      summary: Mail master table
+      operationId: getAllMail
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: authorization
+          in: header
+          description: JWT token to be passed as a header
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Deleted scheme successfully
+        "401":
+          description: Validation Error
+        "405":
+          description: Invalid input
+    post:
+      tags:
+        - Mail
+      summary: Mail master table
+      operationId: createMail
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: authorization
+          in: header
+          description: JWT token to be passed as a header
+          required: true
+          type: string
+        - in: "body"
+          name: "body"
+          description: "craete Mail object"
+          required: true
+          schema:
+            $ref: "#/definitions/Mail"
+      responses:
+        "200":
+          description: created Mail successfully
+        "401":
+          description: Validation Error
+        "405":
+          description: Invalid input
+  /updateLog:
+    post:
+      tags:
+        - Log
+      summary: Log creation api
+      operationId: createLog
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: authorization
+          in: header
+          description: JWT token to be passed as a header
+          required: true
+          type: string
+        - in: "body"
+          name: "body"
+          description: "craete Log object"
+          required: true
+          schema:
+            $ref: "#/definitions/updateLog"
+    responses:
+      "200":
+        description: created Log successfully
+      "401":
+        description: Validation Error
+      "405":
+        description: Invalid input
 definitions:
   Scheme:
     type: object
@@ -1244,7 +1321,16 @@ definitions:
       status:
         type: string
       signature:
-        type: string       
+        type: string
+  updateLog:
+    type: object
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+      timeLog:
+        type: string     
   User:
     type: object
     properties:
@@ -1274,3 +1360,4 @@ definitions:
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
+
